hot fix superposition on firefox

--- a/src/styles/_hex.scss
+++ b/src/styles/_hex.scss
@@ -34,6 +34,7 @@
 
       .hex-front,
       .hex-back {
+        transform: translateZ(0);
         position: absolute;
         top: 0;
         left: 0;
